changed the css to article padding

--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,10 @@ body{
   align-items: center;
   justify-content: center;
 }
+#articleDetails{
+  padding-left:5%;
+  padding-right:5%;
+}
 
 .articleListDiv{
   list-style-type: none;
@@ -97,7 +101,6 @@ body{
 
 .searchInputDiv input{
   width: 30%;
-  
 }
 
 textarea {
